--- a/mysql.yml
+++ b/mysql.yml
@@ -17,5 +17,5 @@
      community.mysql.mysql_info:
      login_user: root
      login_password: ExpenseApp@1
-     login_host: 
+     login_host: 44.206.230.225
           
