--- a/mysql.yml
+++ b/mysql.yml
@@ -4,12 +4,12 @@
   tasks:
    - name: Install MySql Server
      ansible.builtin.package:
-      - name: mysql-server
+        name: mysql-server
         state: installed
 
    - name: enable and start service   
      ansible.builtin.service:
-      - name: mysqld
+        name: mysqld
         state: started
         enabled: yes
 
