--- a/mysql.yml
+++ b/mysql.yml
@@ -29,5 +29,5 @@
    - name: Install PyMySql 
      ansible.builtin.pip:
         name: PyMySQL
-        state: installed   
+        state: present   
         
