--- a/mysql.yml
+++ b/mysql.yml
@@ -30,4 +30,8 @@
      ansible.builtin.pip:
         name: PyMySQL
         state: present   
+
+   - name: set root password
+     ansible.builtin.command: "mysql_secure_installation --set-root-pass ExpenseApp@1"
+     when: mysql_info.failed is true  
         
