--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,12 @@
 [mysql]
-44.206.230.225
+3.83.239.190
+
+[backend]
+3.82.205.117
+
+[frontend]
+54.211.206.187
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
