--- a/frontend.yml
+++ b/frontend.yml
@@ -37,10 +37,10 @@
       dest: /usr/share/nginx/html
       remote_src: yes
 
-   - name: copy expense config
+   - name: copy frontend config
      ansible.builtin.copy:
-      src: expense.conf
-      dest: /etc/nginx/default.d/expense.conf   
+      src: frontend.conf
+      dest: /etc/nginx/default.d/frontend.conf   
 
    - name: restart nginx
      ansible.builtin.service:
